# api/handler/io/error_io.go
@@ -1,12 +1,8 @@
 package io
 
 type ErrorResponse struct {
-	Message string `json:"message"`
-}
-
-type ValidationErrorResponse struct {
-	ErrorResponse
-	Details []ErrorDetail `json:"details"`
+	Message string        `json:"message"`
+	Details []ErrorDetail `json:"details,omitempty"`
 }
 
 type ErrorDetail struct {
@@ -17,13 +13,5 @@ type ErrorDetail struct {
 func NewErrResp(message string) ErrorResponse {
 	return ErrorResponse{
 		Message: message,
-	}
-}
-
-func NewValidationErrResp(message string) ValidationErrorResponse {
-	return ValidationErrorResponse{
-		ErrorResponse: ErrorResponse{
-			Message: message,
-		},
 	}
 }
